--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="627689">  <td>25/01/19 21:44:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact_T01Test.tc01Test()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">tc01Test</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:43:44</td>   <td>-16124</td> <td title="&gt;&gt;BaseClass.methodBeforeSuite()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&gt;&gt;methodBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:44:23</td>   <td>23807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&lt;&lt;methodAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:44:26</td>   <td>25964</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterClass()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&lt;&lt;methodAfterClass</td> 
+<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterClass()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&lt;&lt;methodAfterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:44:27</td>   <td>27336</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&lt;&lt;methodAfterSuite</td> 
+<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:57</td>   <td>3875</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&lt;&lt;methodAfterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:43:56</td>   <td>-3647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&gt;&gt;methodBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:43:44</td>   <td>-15922</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeClass()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&gt;&gt;methodBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:43:56</td>   <td>-3647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&gt;&gt;methodBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/19 21:44:23</td>   <td>23807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">&lt;&lt;methodAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="627689">  <td>25/01/19 21:43:52</td>   <td>-7333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact_T01Test.demo()[pri:0, instance:createContact.CreateContact_T01Test@702657cc]">demo</td> 
+<tr bgcolor="627689">  <td>25/01/20 09:02:41</td>   <td>-11754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UltraProMax.getInto()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">getInto</td> 
   <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:36</td>   <td>-16427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&gt;&gt;methodBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:49</td>   <td>-3560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&lt;&lt;methodAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:30</td>   <td>-22548</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeClass()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&gt;&gt;methodBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:30</td>   <td>-22565</td> <td title="&gt;&gt;BaseClass.methodBeforeSuite()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&gt;&gt;methodBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
 </table>
