--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,19 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>createContact.CreateContact_T01Test</td>
+<td>practice12.UltraProMax</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc01Test</td>
-<td>smokeSuite </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>demo</td>
+<td>getInto</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
