--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="627689">  <td>25/01/20 09:02:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UltraProMax.getInto()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">getInto</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:53</td>   <td>11754</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterClass()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&lt;&lt;methodAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:49</td>   <td>8194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&lt;&lt;methodAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:57</td>   <td>15629</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&lt;&lt;methodAfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:30</td>   <td>-10794</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeClass()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&gt;&gt;methodBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:36</td>   <td>-4673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&gt;&gt;methodBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/01/20 09:02:30</td>   <td>-10811</td> <td title="&gt;&gt;BaseClass.methodBeforeSuite()[pri:0, instance:practice12.UltraProMax@3c41ed1d]">&gt;&gt;methodBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>25/02/21 17:54:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterClass()[pri:0, instance:createLeads.TC_01@6933b6c6]">&lt;&lt;methodAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>25/02/21 17:54:27</td>   <td>-202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:createLeads.TC_01@6933b6c6]">&lt;&lt;methodAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>25/02/21 17:54:28</td>   <td>120</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createLeads.TC_01@6933b6c6]">&lt;&lt;methodAfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>25/02/21 17:54:10</td>   <td>-17544</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeClass()[pri:0, instance:createLeads.TC_01@6933b6c6]">&gt;&gt;methodBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>25/02/21 17:54:15</td>   <td>-12028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:createLeads.TC_01@6933b6c6]">&gt;&gt;methodBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>25/02/21 17:54:10</td>   <td>-17576</td> <td title="&gt;&gt;BaseClass.methodBeforeSuite()[pri:0, instance:createLeads.TC_01@6933b6c6]">&gt;&gt;methodBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
+<tr bgcolor="80b48f">  <td>25/02/21 17:54:21</td>   <td>-6548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.methodTC_01()[pri:0, instance:createLeads.TC_01@6933b6c6]">methodTC_01</td> 
+  <td>main@1254904160</td>   <td></td> </tr>
 </table>
