--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,17 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>createOrganisation.CreateOrganisationTC04Test</td>
+<td>createContact.CreateContact_T01Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc04Test</td>
+<td>tc01Test</td>
+<td>smokeSuite </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>demo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodBeforeClass</td>
+<td>smokeSuite regressionSUite </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -34,5 +44,10 @@
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodAfterClass</td>
+<td>smokeSuite regressionSUite </td>
 </tr>
 </table>
