--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smokeSuite</td><td>CreateContact_T01Test.tc01Test()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]<br/></td></tr>
+</table>
